# mcpsecScan

./: .gitignore  README.md  pyproject.toml
mcpsec_scan/: __init__.py  api.py  main.py
mcpsec_scan/engine/: l1_quick.py  l2_structure.py  l3_taint.py  l4_mismatch.py  models.py  scanner.py
mcpsec_scan/rules/: code-execution.yaml  command-injection.yaml  misc.yaml
mcpsecscan/: __init__.py  ai_deep_analysis.py  ai_triage.py  api.py  main.py  sarif.py
mcpsecscan/engine/: l1_quick.py  l2_combo.py  l2_structure.py  l3_taint.py  l4_mismatch.py  l4_mismatch_js.py  l5_multifile.py  models.py  scanner.py
mcpsecscan/rules/: command-injection.yaml  deserialization.yaml  path-traversal.yaml  sql-injection.yaml  ssrf.yaml
mcpsecscan/static/: index.html
test_samples/: README.md
test_samples/javascript/malicious/: 01_ssrf.js  03_path_traversal.js  04_sql_injection.ts  05_desc_code_mismatch.js
test_samples/malicious/: 03_ssrf.py  05_supply_chain.py  06_desc_code_mismatch.py
test_samples/malicious_js/: 02_command_injection.js
test_samples/python/malicious/: 04_command_injection.py  07_evasion_neutral_desc.py  08_evasion_deep_chain.py  09_evasion_shlex_bypass.py
test_samples/python/safe/: safe_weather_api.py
test_samples/safe/: safe_calculator.py  safe_weather_api.py
test_samples/safe_js/: safe_server.js
tests/: test_ai_triage.py  test_scanner.py
