[project]
name = "mcpsecscan"
version = "0.2.0"
description = "MCP Server static security scanner. AST + Semgrep taint analysis + description-code mismatch detection. Optional AI triage via any OpenAI-compatible API."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "mcpsec contributors"}]
keywords = ["mcp", "security", "scanner", "static-analysis", "web"]

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
taint = ["semgrep>=1.50"]
ai    = ["httpx>=0.27"]
dev   = ["pytest>=7.0"]

[project.scripts]
mcpsecscan = "mcpsecscan.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcpsecscan*"]

[tool.setuptools.package-data]
mcpsecscan = ["rules/**/*.yaml", "static/*"]
